@@ -1,6 +1,6 @@
 Package: blme
-Version: 1.0-6
-Date: 2024-09-06
+Version: 1.0-7
+Date: 2025-02-28
 Title: Bayesian Linear Mixed-Effects Models
 Authors@R: c(
   person("Vincent", "Dorie", role = c("aut", "cre"), email = "vdorie@gmail.com", comment = c(ORCID = "0000-0002-9576-3064")),
