@@ -8,6 +8,7 @@ S3method(summary, bmerMod)
 S3method(summary, summary.bmerMod)
 S3method(vcov, summary.bmerMod)
 S3method(refit, bmerMod)
+S3method(refitML, bmerMod)
 
 S3method(toString, bmerNormalDist)
 S3method(toString, bmerTDist)
@@ -23,7 +24,7 @@ importFrom(methods, setClass, setGeneric, setMethod)
 
 importFrom(stats, sd, vcov)
 importFrom(stats, gaussian, family)
-importFrom(stats, model.frame)
+importFrom(stats, model.frame, formula)
 importFrom(stats, getCall, setNames)
 
 importFrom(utils, data, getS3method, packageVersion)
@@ -36,4 +37,4 @@ importFrom(lme4, mkMerMod)
 importFrom(lme4, optimizeGlmer)
 importFrom(lme4, mkLmerDevfun, mkGlmerDevfun, updateGlmerDevfun)
 importFrom(lme4, isLMM, isGLMM, mkRespMod, GHrule, isREML)
-importFrom(lme4, refit)
+importFrom(lme4, refit, refitML)
